--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "vuepress-plugin-cursor-effects": "^1.0.0",
     "vuepress-plugin-dynamic-title": "^1.0.0",
     "vuepress-theme-reco": "^1.6.1"
+  },
+  "dependencies": {
+    "vuepress-plugin-ribbon": "^1.0.2"
   }
 }
