--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,16 @@ after_success:
     - git init
     - git config --global user.name "${U_NAME}"
     - git config --global user.email "${U_EMAIL}"
-    - git remote add origin ${GE_ADDRESS}
     - git add -A
     - git commit -m 'deploy'
-    - git push -u origin ${P_BRANCH}
+    - git push --quiet --force "https://${GH_TOKEN}@${GH_REF}" master:${P_BRANCH}
+
+
+# - cd docs/.vuepress/dist
+#     - git init
+#     - git config --global user.name "${U_NAME}"
+#     - git config --global user.email "${U_EMAIL}"
+#     - git remote add origin ${GE_ADDRESS}
+#     - git add -A
+#     - git commit -m 'deploy'
+#     - git push -u origin ${P_BRANCH}
