--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
     - git remote add origin ${GE_ADDRESS}
     - git add -A
     - git commit -m 'deploy'
-    - git push -u origin ${P_BRANCH}
+    - git push --quiet --force "https://${GH_TOKEN}@${GH_REF}" master:${P_BRANCH}
     # - cd docs/.vuepress/dist
     # - git init
     # - git config --global user.name "${U_NAME}"
